# argmining23-image-arg

./: README.md
subTaskA/: bertTokenization.py  classifier.py
subTaskA/Results/: team.bertmodel.TaskA.1.csv  team.bertmodel.TaskA.2.csv  team.bertmodel.TaskA.3.csv
subTaskA/src/: Evaluation.ipynb  Readme.md  dataCleaningScript.py  gui_tweet_classify.ipynb  modelBERTsequence.ipynb
subTaskB/: Readme.md  pyproject.toml  setup.py
subTaskB/Results/Cosine similarity/: Cos_sim_val_pred_labels.csv
subTaskB/Results/validation_values/: balanced_softmax_val_labels.csv  undersampled_softmax_cval_labels.csv  val_labels.csv  val_labels_sigmoid.csv  val_labels_softmax.csv
subTaskB/src/dataset/: CustomDataset.py  TestDataset.py
subTaskB/src/models/: CLIPPreTrainedModelCosineSimilarity.py  CLIPPreTrainedModelSoftmax.py  CLIPPreTrainedModel_TextSummarization_T5.py  CLIPTestScript.py  model_eval.py  models.py
subTaskB/src/models/archive/: CLIPPreTrainedModelCosineSimilarity.py  CLIPPreTrainedModelSigmoid.py  CLIPPreTrainedModel_TextSummarization_GPT2.py  CLIPPreTrainedModel_TextSummarization_T5.py  CLIPPretrainedModel_Infographic.py  CLIPPretrainedModel_Text.py
subTaskB/src/utils/: oversampling.py  undersample.py  utils.py
